--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@vue/cli-plugin-eslint": "^3.5.1",
     "babel-eslint": "^10.1.0",
     "chromedriver": "^89.0.0",
     "cross-env": "^5.2.1",
     "eslint": "^7.22.0",
+    "eslint-loader": "^3.0.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.7.0",
     "nightwatch": "^1.5.1",
     "sass": "^1.34.0",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.1.1",
+    "stylelint": "^13.7.1",
+    "stylelint-config-recommended": "^3.0.0"
   }
 }
