--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
+    "font-awesome": "^4.7.0",
     "nuxt": "^2.15.3",
     "vuex": "^3.6.2"
   },
