--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^3.9.1",
     "font-awesome": "^4.7.0",
     "nuxt": "^2.15.3",
+    "vue-scrollto": "^2.20.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
