--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "test:e2e": "nightwatch"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.22",
+    "@amcharts/amcharts4-fonts": "^4.0.1",
+    "@amcharts/amcharts4-geodata": "^4.1.22",
     "@nuxtjs/axios": "^5.13.1",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.1",
