Set up Google authentication (#3)
* update packages
google sign in
user in store
sign out

* missing key added

* Adjust linting style

Co-authored-by: Spyros Bekiaris <spirosbekos@gmail.com>

--- a/package.json
+++ b/package.json
@@ -20,32 +20,29 @@
     "@amcharts/amcharts4": "^4.10.22",
     "@amcharts/amcharts4-fonts": "^4.0.1",
     "@amcharts/amcharts4-geodata": "^4.1.22",
-    "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/axios": "^5.13.6",
     "autosuggest-highlight": "^3.1.1",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "nuxt": "^2.15.3",
     "vue-scrollto": "^2.20.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^6.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "@vue/cli-plugin-eslint": "^3.5.1",
+    "@nuxtjs/eslint-config": "^6.0.1",
     "babel-eslint": "^10.1.0",
-    "chromedriver": "^89.0.0",
-    "cross-env": "^5.2.1",
-    "eslint": "^7.22.0",
-    "eslint-loader": "^3.0.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.7.0",
-    "nightwatch": "^1.5.1",
-    "sass": "^1.34.0",
+    "chromedriver": "^94.0.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.32.0",
+    "nightwatch": "^1.7.11",
+    "sass": "^1.42.1",
     "sass-loader": "^10.1.1",
-    "stylelint": "^13.7.1",
-    "stylelint-config-recommended": "^3.0.0"
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended": "^5.0.0"
   }
 }
