Rework index-page and create SimpleMap component

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-BASE_API_URL=''
-GOOGLE_CLIENT_ID='google oauth2 client id'
+# STIRData APIs
+BASE_API_URL='stirdata-base-api-url'
+
+# Authorization configuration
+GOOGLE_CLIENT_ID='google-oauth2-client-id'
