--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.6.0",
     "nuxt": "^2.15.3",
     "vue-scrollto": "^2.20.0",
+    "vue-slick-carousel": "^1.0.6",
     "vuex": "^3.6.2",
     "webpack": "^4.46.0"
   },
