--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@amcharts/amcharts4": "^4.10.22",
     "@amcharts/amcharts4-fonts": "^4.0.1",
     "@amcharts/amcharts4-geodata": "^4.1.22",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxtjs/axios": "^5.13.6",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.4",
@@ -35,7 +37,10 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@nuxtjs/eslint-config": "^6.0.1",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "babel-eslint": "^10.1.0",
     "chromedriver": "^94.0.0",
     "cross-env": "^7.0.3",
