--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^2.9.4",
     "core-js": "^3.9.1",
     "font-awesome": "^4.7.0",
+    "hchs-vue-charts": "^1.2.8",
     "jquery": "^3.6.0",
     "nuxt": "^2.15.3",
+    "vue-chartjs": "^3.5.1",
     "vue-scrollto": "^2.20.0",
     "vue-slick-carousel": "^1.0.6",
     "vuex": "^3.6.2",
