--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nuxt": "^2.15.3",
     "rdf-namespaces": "^1.9.2",
     "tripledoc": "^4.4.0",
+    "v-click-outside": "^3.1.2",
     "vue-chartjs": "^3.5.1",
     "vue-scrollto": "^2.20.0",
     "vue-slick-carousel": "^1.0.6",
