Update phrase-prefix-search api call in explore-page

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # STIRData APIs
 BASE_API_URL='stirdata-base-api-url'
+SAGE_API_URL='sage-api-url'
 
 # Authorization configuration
 GOOGLE_CLIENT_ID='google-oauth2-client-id'
