--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       PROJECT: stirdata
       APP: frontend
       BASE_API_URL: https://dev.stirdata.eu/api
+      SAGE_API_URL: https://stirdata-semantic.ails.ece.ntua.gr/api
       GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
 
     steps:
