--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@amcharts/amcharts4-geodata": "^4.1.22",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@nuxtjs/auth-next": "5.0.0-1643791578.532b3d6",
     "@nuxtjs/axios": "^5.13.6",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.4",
