fix portal api url

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,6 @@ jobs:
       DEPLOY_USER: deploy
       PROJECT: stirdata
       APP: frontend
-      BASE_API_URL: https://dev.stirdata.eu/api
       SAGE_API_URL: https://stirdata-semantic.ails.ece.ntua.gr/api
       GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
 
@@ -38,12 +37,13 @@ jobs:
         run: |
           echo DEPLOY_SERVER=hotwheels.ails.ece.ntua.gr >> $GITHUB_ENV
           echo DEPLOY_TARGET=/data/$PROJECT/$APP/current >> $GITHUB_ENV
+          echo BASE_API_URL=https://dev.stirdata.eu/api >> $GITHUB_ENV
       - name: Set env for production
         if: endsWith(github.ref, '/main')
         run: |
           echo DEPLOY_SERVER=lego.ails.ece.ntua.gr >> $GITHUB_ENV
           echo DEPLOY_TARGET=/data/$PROJECT/$APP/current >> $GITHUB_ENV
-
+          echo BASE_API_URL=https://portal.stirdata.eu/api >> $GITHUB_ENV
       - name: Checkout 🛎
         uses: actions/checkout@master
 
