--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate --devtools",
+    "generate": "node --max-old-space-size=8192 node_modules/nuxt/bin/nuxt.js generate --devtools",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
     "lint:fix": "eslint --fix --ext .js,.vue .",
