--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxtjs/auth-next": "5.0.0-1643791578.532b3d6",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/toast": "^3.3.1",
     "@zaengle/error-handler": "^1.0.2",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.4",
